--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,13 +8,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimary">
+    android:background="@color/dark_gray">
+
     <ImageView
         android:id="@+id/header_icon"
         android:layout_width="@dimen/image_header_dimen"
         android:layout_height="@dimen/image_header_dimen"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/image_header_top_margin"
-        android:src="@drawable/ic_camera_alt_48px" />
+        android:src="@drawable/github_logo" />
 
 </RelativeLayout>
